# findex_cloud

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  database.sqlite-shm  database.sqlite-wal
.github/workflows/: ci.yml  docker.yml
example/: index.mjs  package-lock.json  package.json  python-example.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
migrations/: 20230109090557_create_indexes_table.sql  20230117102518_create_entries_table.sql  20230117102522_create_chains_table.sql  20230210092449_create_stats_table.sql
migrations_index/: 20230117102518_create_entries_table.sql  20230117102522_create_chains_table.sql
src/: auth0.rs  core.rs  debug_logs.rs  dynamodb.rs  errors.rs  heed.rs  main.rs  rocksdb.rs  sqlite.rs
static/: index.html  package-lock.json  package.json  style.css
