[package]
name = "findex_cloud"
version = "0.1.0"
edition = "2021"

[features]
default = ["rocksdb"]
multitenant = ["alcoholic_jwt", "reqwest"]
log_requests = ["base64"]
heed = ["dep:heed"]
rocksdb = ["dep:rocksdb"]

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-httpauth = "0.8.0"
alcoholic_jwt = { version = "4091.0.0", optional = true }
chrono = { version = "0.4.23", features = ["serde"] }
cosmian_crypto_core = "7.0.0"
cosmian_findex = "3.0.0"
cloudproof_findex = { version = "3.0.0", features = ["cloud"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"], optional = true }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = "1.25.0"
rocksdb = { version = "0.20.1", features = ["multi-threaded-cf"], optional = true }
base64 = { version = "0.21.0", optional = true }
heed = { version = "0.11.0", optional = true }
