[package]
name = "findex_cloud"
version = "0.1.0"
edition = "2021"

[features]
default = ["rocksdb", "sqlite"]
multitenant = ["alcoholic_jwt", "reqwest"]
log_requests = ["base64"]
lmmd = ["dep:heed"]
rocksdb = ["dep:rocksdb"]
sqlite = ["sqlx"]
dynamodb = ["aws-sdk-dynamodb", "aws-config", "aws-smithy-http"]

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-httpauth = "0.8.0"
alcoholic_jwt = { version = "4091.0.0", optional = true }
chrono = { version = "0.4.23", features = ["serde"] }
cosmian_crypto_core = "9.0.1"
cosmian_findex = "5.0.1"
cloudproof_findex = { version = "5.0.3", features = ["cloud"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"], optional = true }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"], optional = true  }
tokio = "1.25.0"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"], optional = true }
base64 = { version = "0.21.0", optional = true }
heed = { version = "0.11.0", optional = true }
async-trait = "0.1.68"
aws-sdk-dynamodb = { version = "0.28.0", optional = true }
aws-config = { version = "0.55.3", optional = true }
aws-smithy-http = { version = "0.55.3", optional = true }
